Read employees operation in views

--- a/src/app/employees/list-employees.component.html
+++ b/src/app/employees/list-employees.component.html
@@ -1,3 +1,97 @@
-<p>
-  list-employees works!
-</p>
+<div class="panel panel-primary" *ngFor="let employee of employees">
+
+  <div class="panel-heading">
+    <h3 class="panel-title">{{employee.name}}</h3>
+  </div>
+<div class="panel-body">
+<div class="col-xs-10">
+
+  <div class="row">
+    <div class="col-xs-4">
+    <img [src]="employee.photoPath"/>
+    </div>
+
+    <div class="col-xs-8">
+      <div class="row">
+        <div class="col-xs-6">
+Gender
+      </div>
+
+      <div class="col-xs-6">
+         : {{employee.gender}}
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-xs-6">
+Date of Birth
+    </div>
+
+    <div class="col-xs-6">
+       : {{employee.dateOfBirth | date:'mediumDate'}}
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-xs-6">
+Contact Preference
+  </div>
+
+  <div class="col-xs-6">
+     : {{employee.contactPreference}}
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="col-xs-6">
+Phone
+</div>
+
+<div class="col-xs-6">
+   : {{employee.phonenumber}}
+</div>
+
+</div>
+
+<div class="row">
+  <div class="col-xs-6">
+Email
+</div>
+
+<div class="col-xs-6">
+   : {{employee.email}}
+</div>
+
+</div>
+
+<div class="row">
+  <div class="col-xs-6">
+Department
+</div>
+
+<div class="col-xs-6">
+   : {{employee.department}}
+</div>
+
+</div>
+
+<div class="row">
+  <div class="col-xs-6">
+Active
+</div>
+
+<div class="col-xs-6">
+   : {{employee.isActive}}
+</div>
+
+</div>
+  </div>
+
+</div>
+
+</div>
+
+</div>
