--- a/src/app/employees/list-employees.component.html
+++ b/src/app/employees/list-employees.component.html
@@ -6,7 +6,7 @@
 <div class="panel-body">
 <div class="col-xs-10">
 
-  <div class="row">
+  <div class="row vertical-align">
     <div class="col-xs-4">
     <img [src]="employee.photoPath"/>
     </div>
