--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,24 @@
 <div class="container">
-  <app-list-employees></app-list-employees>
+  <nav class="navbar navbar-default">
+
+    <ul class="nav navbar-nav">
+      <li>
+        <a routerLink="list">List</a>
+      </li>
+
+      <li>
+        <a routerLink="create">Create</a>
+      </li>
+
+    </ul>
+
+
+    </nav>
+
+    <!--When we navigate to the 'list' route
+    ListEmployees viewtemplate is displayed here .
+    Similar to setting up RenderBody section in ASP MVC
+    LayoutMaster page-->
+    <router-outlet></router-outlet>
 
 </div>
-
