--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -1,3 +1,28 @@
-<p>
-  create-employee works!
-</p>
+<form #employeeForm="ngForm">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title">Create Employee</h3>
+    </div>
+
+  <div class="panel-body">
+    <div class="form-group">
+  <label for="fullName">Full Name</label>
+
+  <input id="fullName" type="text" class="form-control"/>
+
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+
+      <input id="email" type="text" class="form-control"/>
+
+        </div>
+  </div>
+  <div class="panel-footer">
+
+    <button type="submit" class="btn btn-primary">Save</button>
+  </div>
+  </div>
+</form>
+
