Angular generated form model

--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -8,14 +8,14 @@
     <div class="form-group">
   <label for="fullName">Full Name</label>
 
-  <input id="fullName" type="text" class="form-control"/>
+  <input id="fullName" name="fullName" [(ngModel)]="fullName" type="text" class="form-control"/>
 
     </div>
 
     <div class="form-group">
       <label for="email">Email</label>
 
-      <input id="email" type="text" class="form-control"/>
+      <input id="email" name="email" [(ngModel)]="email" type="text" class="form-control"/>
 
         </div>
   </div>
@@ -26,3 +26,4 @@
   </div>
 </form>
 
+Angular Generated Form Model : {{employeeForm.value | json}}
