--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -1,4 +1,4 @@
-<form #employeeForm="ngForm">
+<form #employeeForm="ngForm" (ngSubmit)="saveEmployee(employeeForm)">
   <div class="panel panel-primary">
     <div class="panel-heading">
       <h3 class="panel-title">Create Employee</h3>
