--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -18,6 +18,20 @@
       <input id="email" name="email" [(ngModel)]="email" type="text" class="form-control"/>
 
         </div>
+
+        <div class="form-group">
+          <label for="gender">Gender</label>
+          <div class="form-control">
+            <label class="radio-inline">
+              <input  value="male" type="radio" name="gender" [(ngModel)]="gender"/>
+              Male
+            </label>
+            <label class="radio-inline">
+              <input  value="female"  type="radio" name="gender"  [(ngModel)]="gender"/>
+              Female
+            </label>
+          </div>
+            </div>
   </div>
   <div class="panel-footer">
 
