Add CheckBox and set to checked by default

--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -52,6 +52,16 @@
             </label>
           </div>
             </div>
+
+            <div class="form-group">
+              <div class="form-control">
+                <label class="checkbox-inline">
+                  <input  value="male" type="checkbox" name="isActive" [(ngModel)]="isActive" />
+                Is Active
+                </label>
+
+              </div>
+                </div>
   </div>
   <div class="panel-footer">
 
