--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -62,6 +62,18 @@
 
               </div>
                 </div>
+
+                <div class="form-group">
+                    <label for="department">
+                  Department
+                    </label>
+                    <select id="department"  name="department" [(ngModel)]="department"  class="form-control">
+                      <option value="1">IT</option>
+                      <option value="2">HR</option>
+                      <option value="3" selected>Payroll</option>
+                      <option value="4">Marketing</option>
+                    </select>
+                    </div>
   </div>
   <div class="panel-footer">
 
