Bind SelectList from backend/array

--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -68,12 +68,13 @@
                   Department
                     </label>
                     <select id="department"  name="department" [(ngModel)]="department"  class="form-control">
-                      <option value="1">IT</option>
-                      <option value="2">HR</option>
-                      <option value="3" selected>Payroll</option>
-                      <option value="4">Marketing</option>
+                      <option *ngFor="let dept of departments" [value]="dept.id">
+                        {{dept.name}}
+                      </option>
+
                     </select>
                     </div>
+
   </div>
   <div class="panel-footer">
 
