--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -4,100 +4,157 @@
       <h3 class="panel-title">Create Employee</h3>
     </div>
 
-  <div class="panel-body">
-    <div class="form-group">
-  <label for="fullName">Full Name</label>
+    <div class="panel-body">
+      <div class="form-group">
+        <label for="fullName">Full Name</label>
 
-  <input id="fullName" name="fullName" [(ngModel)]="fullName" type="text" class="form-control"/>
+        <input
+          id="fullName"
+          name="fullName"
+          [(ngModel)]="fullName"
+          type="text"
+          class="form-control"
+        />
+      </div>
 
-    </div>
+      <div class="form-group">
+        <label for="email">Email</label>
 
-    <div class="form-group">
-      <label for="email">Email</label>
+        <input
+          id="email"
+          name="email"
+          [(ngModel)]="email"
+          type="text"
+          class="form-control"
+        />
+      </div>
+      <div class="form-group">
+        <label for="phoneNumber">Phone Number</label>
 
-      <input id="email" name="email" [(ngModel)]="email" type="text" class="form-control"/>
+        <input
+          id="phoneNumber"
+          name="phoneNumber"
+          [(ngModel)]="phoneNumber"
+          type="text"
+          class="form-control"
+        />
+      </div>
 
+      <div class="form-group">
+        <label for="gender">Contact Preference</label>
+        <div class="form-control">
+          <label class="radio-inline">
+            <input
+              value="email"
+              type="radio"
+              name="contactPreference"
+              [(ngModel)]="contactPreference"
+            />
+            Email
+          </label>
+          <label class="radio-inline">
+            <input
+              value="phoneNumber"
+              type="radio"
+              name="contactPreference"
+              [(ngModel)]="contactPreference"
+            />
+            Phone
+          </label>
         </div>
-        <div class="form-group">
-          <label for="phoneNumber">Phone Number</label>
+      </div>
 
-          <input id="phoneNumber" name="phoneNumber" [(ngModel)]="phoneNumber" type="text" class="form-control"/>
+      <div class="form-group">
+        <label for="gender">Gender</label>
+        <div class="form-control">
+          <label class="radio-inline">
+            <input
+              value="male"
+              type="radio"
+              name="gender"
+              [(ngModel)]="gender"
+            />
+            Male
+          </label>
+          <label class="radio-inline">
+            <input
+              value="female"
+              type="radio"
+              name="gender"
+              [(ngModel)]="gender"
+            />
+            Female
+          </label>
+        </div>
+      </div>
 
-            </div>
+      <div class="form-group">
+        <div class="form-control">
+          <label class="checkbox-inline">
+            <input
+              value="male"
+              type="checkbox"
+              name="isActive"
+              [(ngModel)]="isActive"
+            />
+            Is Active
+          </label>
+        </div>
+      </div>
 
-            <div class="form-group">
-              <label for="gender">Contact Preference</label>
-              <div class="form-control">
-                <label class="radio-inline">
-                  <input  value="email" type="radio" name="contactPreference" [(ngModel)]="contactPreference"/>
-                  Email
-                </label>
-                <label class="radio-inline">
-                  <input  value="phoneNumber"  type="radio" name="contactPreference"  [(ngModel)]="contactPreference"/>
-                 Phone
-                </label>
-              </div>
-                </div>
+      <div class="form-group">
+        <label for="department">
+          Department
+        </label>
+        <select
+          id="department"
+          name="department"
+          [(ngModel)]="department"
+          class="form-control"
+        >
+          <option *ngFor="let dept of departments" [value]="dept.id">
+            {{ dept.name }}
+          </option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="dateOfBirth">Date of Birth</label>
+        <input
+          id="dateOfBirth"
+          name="dateOfBirth"
+          [(ngModel)]="dateOfBirth"
+          type="date"
+          class="form-control"
+        />
+      </div>
 
-        <div class="form-group">
-          <label for="gender">Gender</label>
-          <div class="form-control">
-            <label class="radio-inline">
-              <input  value="male" type="radio" name="gender" [(ngModel)]="gender"/>
-              Male
-            </label>
-            <label class="radio-inline">
-              <input  value="female"  type="radio" name="gender"  [(ngModel)]="gender"/>
-              Female
-            </label>
-          </div>
-            </div>
+      <div class="form-group">
+        <label for="photoPath">Photo Path</label>
+        <input
+          id="photoPath"
+          name="photoPath"
+          [(ngModel)]="photoPath"
+          type="text"
+          class="form-control"
+        />
+      </div>
 
-            <div class="form-group">
-              <div class="form-control">
-                <label class="checkbox-inline">
-                  <input  value="male" type="checkbox" name="isActive" [(ngModel)]="isActive" />
-                Is Active
-                </label>
-
-              </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="department">
-                  Department
-                    </label>
-                    <select id="department"  name="department" [(ngModel)]="department"  class="form-control">
-                      <option *ngFor="let dept of departments" [value]="dept.id">
-                        {{dept.name}}
-                      </option>
-
-                    </select>
-                    </div>
-                    <div class="form-group">
-                      <label for="dateOfBirth">Date of Birth</label>
-                      <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth" type="date" class="form-control"/>
-                        </div>
-
-                        <div class="form-group">
-                          <label for="photoPath">Photo Path</label>
-                          <input id="photoPath" name="photoPath" [(ngModel)]="photoPath" type="text" class="form-control"/>
-                            </div>
-
-                            <div class="form-group">
-                              <button (click)="togglePhotoPreview()" class="btn btn-primary"> Show Preview</button>
-                                </div>
-                            <div class="form-group">
-                              <img  [src]="photoPath" height="200" width="200" *ngIf="previewPhoto"/>
-
-                                </div>
-
-  </div>
-  <div class="panel-footer">
-
-    <button type="submit" class="btn btn-primary">Save</button>
-  </div>
+      <div class="form-group">
+        <button
+          type="button"
+          (click)="togglePhotoPreview()"
+          class="btn btn-primary">
+         {{ previewPhoto? "Hide ": "Show " }}Preview
+        </button>
+      </div>
+      <div class="form-group">
+        <img [src]="photoPath" height="200" width="200" *ngIf="previewPhoto" />
+      </div>
+    </div>
+    <div class="panel-footer">
+      <button type="submit" class="btn btn-primary">Save</button>
+    </div>
   </div>
 </form>
 
-Angular Generated Form Model : {{employeeForm.value | json}}
+Angular Generated Form Model : {{ employeeForm.value | json }}
