ngNativeValidate to enable native browser validation

--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -1,4 +1,4 @@
-<form #employeeForm="ngForm" (ngSubmit)="saveEmployee(employeeForm)">
+<form #employeeForm="ngForm" ngNativeValidate (ngSubmit)="saveEmployee(employeeForm)">
   <div class="panel panel-primary">
     <div class="panel-heading">
       <h3 class="panel-title">Create Employee</h3>
@@ -9,6 +9,7 @@
         <label for="fullName">Full Name</label>
 
         <input
+        required
           id="fullName"
           name="fullName"
           [(ngModel)]="fullName"
