--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -84,7 +84,8 @@
       </div>
       <div class="form-group">
         <label for="dateOfBirth">Date of Birth</label>
-        <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth" type="text" class="form-control"/>
+        <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth"
+        type="text" bsDatepicker class="form-control"/>
       </div>
 
       <div class="form-group">
