--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -82,11 +82,15 @@
           </option>
         </select>
       </div>
-      <div class="form-group">
-        <label for="dateOfBirth">Date of Birth</label>
-        <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth"
-        type="text" bsDatepicker class="form-control"/>
+
+      <div class="row">
+        <div class="form-group col-md-5">
+          <label for="dateOfBirth">Date of Birth</label>
+          <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth" placement="right"
+          type="text" bsDatepicker [bsConfig]="datePickerConfig" class="form-control"/>
+        </div>
       </div>
+
 
       <div class="form-group">
         <label for="photoPath">Photo Path</label>
