--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -116,7 +116,7 @@
       </div>
     </div>
     <div class="panel-footer">
-      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-primary" [disabled]="employeeForm.invalid">  Save</button>
     </div>
   </div>
 </form>
